MB-41332: DcpProducer::backfillMgr can be a nullptr

::closeAllStreams will reset the backfillMgr and any public
functions of DcpProducer should check for null before dereferencing
the pointer.

Change-Id: I12aa0da1ed7b201804c5e6f4c44869d34fa295e8
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/140423
Tested-by: Jim Walker <jim@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>